--- a/themes/butterfly/languages/zh-CN.yml
+++ b/themes/butterfly/languages/zh-CN.yml
@@ -79,7 +79,7 @@ aside:
     headline: 最新评论
     loading_text: 正在加载中...
     error: 无法获取评论，请确认相关配置是否正确
-    zero: 没有评论
+    zero: No Comments
     image: 图片
     link: 链接
     code: 代码
