--- a/source/_posts/2022-08-09-Markdown语法与外挂标签写法汇总.md
+++ b/source/_posts/2022-08-09-Markdown语法与外挂标签写法汇总.md
@@ -9,7 +9,7 @@ categories:
   - 文档
 abbrlink: 2013454d
 sticky: #置顶，数值越大越靠前
-swiper_index: 
+swiper_index: #轮播图排序，数值越大越靠前
 date: 2022-08-09 18:19:03
 updated: 2022-10-23 22:00:00
 ---
